# firmware-v2

./: .ccls  .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: docs.yml  qa.yml
docs/: build.fish  conf.py  getting_started.rst  index.rst  pinout.rst  requirements.txt
docs/api_reference/: adc.rst  index.rst  ndef.rst  persistent_storage.rst  picc.rst  prelude.rst  rfid.rst  spi.rst  wifi.rst
docs/technical_documentation/: index.rst
main/: CMakeLists.txt  a.h  main.c  prelude.h
main/adc/: adc.c  adc.h
main/mrfc522/: mrfc522.c  mrfc522.h
main/ndef/: ndef.c  ndef.h
main/persistent_storage/: persistent_storage.c  persistent_storage.h
main/picc/: picc.c  picc.h
main/rfid/: rfid.c  rfid.h  rfid_pcd_register_types.h  rfid_registers.h
main/sensors/: sensors.c  sensors.h
main/spi/: spi.c  spi.h
main/wifi/: wifi.c  wifi.h
